@@ -1,4 +1,4 @@
-DIST object_daddy-0.4.2.tgz 13207 RMD160 d6ac7caec70ceea00aba12140803639cb0840e85 SHA1 1440437c6e67d9f1974127abf88d49edfa853411 SHA256 aa1fa3e0db05736712d25a067aa51e1036e616530cbc7443a791209b6faafc5d
-EBUILD object_daddy-0.4.2.ebuild 570 RMD160 22c367d9272b78401dbe6c7e149e56990baefb82 SHA1 3df8738e56ca5a2252ee4f59728e26d00b47ee35 SHA256 2090a5af5b79086a047f5e2380792983a523e0926f50542ddd378106c315e814
-MISC ChangeLog 449 RMD160 e469a30cd50689f0e03299626841abc8ef24be7f SHA1 de50216eb3d85b2fc906730810a6d52089202097 SHA256 f160f8027cc7a8d5e8f8c948208d5108c9786540d0ec37cacc355f72f43d32a7
+DIST nofxx-object_daddy-0.4.1.gem 15872 RMD160 8c34a3353e0f94ba7f153b3581e2d6bca9a2a9b4 SHA1 9816ea20d740b8f66f5de2c10a0a3087a4157d6e SHA256 0107795e64c95af025b1da0ac01c315483e05fcfdb98258c18e380551cd3ad0d
+EBUILD object_daddy-0.4.1.ebuild 519 RMD160 8ac16ae0c6376b2a2ea1e6200e0a9f328c251073 SHA1 01125a7a3b81f5edb750378b4c96783f10a04e10 SHA256 cee0af1bc518facd41a1f385856df856c63dd446c25788139143a398a84bc1f0
+MISC ChangeLog 670 RMD160 728fb590ccfd564b61dce932a2b579a71fe21bda SHA1 3c3a39794699e2c8944746ea2c5d32ba0047ee97 SHA256 806024fca5dda8c6a91a96b8a7c4b57918b6a3bf0e8fe9ba569dd620d6fcbb2e
 MISC metadata.xml 534 RMD160 129bd74432811bd11e6a91d6677f78fee7f372fb SHA1 ad57effc735b1554f71caa1e0cd1da204f2778fe SHA256 87f822a09f9aabc71339721db11785987f997de1a1c7b67ec77953ce1af002dc
