@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*object_daddy-0.4.1 (03 Feb 2010)
+
+  03 Feb 2010; Ewoud Kohl van Wijngaarden <ewoud@kohlvanwijngaarden.nl>
+  +object_daddy-0.4.1.ebuild, -object_daddy-0.4.2.ebuild:
+  Switch to nofxx object_daddy since it's a proper gem
+
   03 Feb 2010; Ewoud Kohl van Wijngaarden <ewoud@kohlvanwijngaarden.nl>
   object_daddy-0.4.2.ebuild:
   Rewrite from ruby-ng to ruby-fakegem
